--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileChallengeUala"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAew_Mx_L-naZoyfZAsmftcW6bxiJeDTWA" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
