--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ kotlinxSerialization = "1.7.2"
 mapsCompose = "1.0.0"
 playServicesMaps = "19.0.0"
 location = "21.3.0"
+mockkVersion = "1.12.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -52,7 +53,7 @@ google-dagger-hilt-android-testing = { group = "com.google.dagger", name = "hilt
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofitVersion" }
 androidx-room-common = { group = "androidx.room", name = "room-common", version.ref = "roomCommon" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
-
+mockk = { group = "io.mockk", name = "mockk", version.ref = "mockkVersion" }
 maps-compose = { module = "com.google.maps.android:maps-compose", version.ref = "mapsCompose" }
 play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 play-services-location = {module = "com.google.android.gms:play-services-location" , version.ref = "location" }
